@@ -358,10 +358,12 @@ propEntry *getDocProperty( RESULT *result, struct metaEntry **meta_entry, int me
     {
         if ( is_meta_entry( *meta_entry, AUTOPROPERTY_RESULT_RANK ) )
         {
-#ifdef RAW_RANK
-            num = PACKLONG( result->rank );
-            return CreateProperty( *meta_entry, (unsigned char *)&num, sizeof( num ), 1, &error_flag );
-#else
+           /* return raw rank if RankScheme asks for it */
+            if (result->db_results->results->sw->RankScheme == 2) {
+                num = PACKLONG( result->rank );
+                return CreateProperty( *meta_entry, (unsigned char *)&num, sizeof( num ), 1, &error_flag );
+            }
+
             int scale_factor = result->db_results->results->rank_scale_factor;
             unsigned long rank_num;
 
@@ -382,7 +384,6 @@ propEntry *getDocProperty( RESULT *result, struct metaEntry **meta_entry, int me
 
             num = PACKLONG( rank_num );
             return CreateProperty( *meta_entry, (unsigned char *)&num, sizeof( num ), 1, &error_flag );
-#endif
         }
 
         if ( is_meta_entry( *meta_entry, AUTOPROPERTY_REC_COUNT ) )
